manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  # namespace: app
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: app
