manifests/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traffic-isolation
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
